--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_27.apk>tauclock_0_27.apk</a><br>
+		<a href=tauclock_0_28.apk>tauclock_0_28.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
 		<br>
@@ -20,6 +20,16 @@ You can read all about it in <a href="primer_000.html">the tauclock primer</a><b
 <a href="primer.html">the older tauclock primer</a>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.28 (tauclock_0_28.apk)
+		<ul>
+			<li>removed arc shading, revert to earlier look</li>
+			<li>optimize arc drawing, drawing now twice as fast</li>
+			<li>fixed moon drawing artifacts on inner ring twilight</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.27 (tauclock_0_27.apk)
