--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
 		<br>
 		<a href=tauclock_0_28.apk>tauclock_0_28.apk</a><br>
 		<br>
-		<table><tr><td><img width=320 src=tauclock.0.16.main.png></td><td><img width=320 src=example2.png></td></tr></table><br>
+		<table><tr><td><img width=320 src=tauclock_0_28_main.png></td><td><img width=320 src=tauclock_0_26_globe.png></td></tr></table><br>
 		<br>
 	</center>
 	</font>
