updated for new release

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_29.apk>tauclock_0_29.apk</a><br>
+		<a href=tauclock_0_30.apk>tauclock_0_30.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock_0_28_main.png></td><td><img width=320 src=tauclock_0_26_globe.png></td></tr></table><br>
 		<br>
@@ -20,6 +20,22 @@ You can read all about it in <a href="primer_000.html">the tauclock primer</a><b
 <a href="primer.html">the older tauclock primer</a>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.30 (tauclock_0_30.apk)
+		<ul>
+			<li>replaced math trig library with optimized code</li>
+			<li>replaced libnova astronomy library with optimized code</li>
+			<li>use system language settings for month and weekday names</li>
+			<li>more drawing optimizations and bug fixes</li>
+			<li>known issues with month/weekday names:
+				<ul>
+					<li>may not display properly for RTL languages</li>
+					<li>may not display properly for languages outside the Unicode BMP</li>
+				</ul></li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.29 (tauclock_0_29.apk)
