updated web index for v0.31

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_30.apk>tauclock_0_30.apk</a><br>
+		<a href=tauclock_0_31.apk>tauclock_0_31.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock_0_28_main.png></td><td><img width=320 src=tauclock_0_26_globe.png></td></tr></table><br>
 		<br>
@@ -20,6 +20,14 @@ You can read all about it in <a href="primer_000.html">the tauclock primer</a><b
 <a href="primer.html">the older tauclock primer</a>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.31 (tauclock_0_31.apk)
+		<ul>
+			<li>optimized globe drawing in manual location mode</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.30 (tauclock_0_30.apk)
