--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_32.apk>tauclock_0_32.apk</a><br>
+		<a href=tauclock_0_33.apk>tauclock_0_33.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock_0_28_main.png></td><td><img width=320 src=tauclock_0_26_globe.png></td></tr></table><br>
 		<br>
@@ -20,6 +20,15 @@ You can read all about it in <a href="primer_000.html">the tauclock primer</a><b
 <a href="primer.html">the older tauclock primer</a>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.33 (tauclock_0_33.apk)
+		<ul>
+			<li>fixed bug w/ outer planet rise/transit/set times</li>
+			<li>rudimentary eclipse handling</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.32 (tauclock_0_32.apk)
