updated web site index

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_36.apk>tauclock_0_36.apk</a><br>
+		<a href=tauclock_0_37.apk>tauclock_0_37.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock_0_28_main.png></td><td><img width=320 src=tauclock_0_26_globe.png></td></tr></table><br>
 		<br>
@@ -20,6 +20,22 @@ You can read all about it in <a href="primer_000.html">the tauclock primer</a><b
 <a href="primer.html">the older tauclock primer</a>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.37 (tauclock_0_37.apk)
+		<ul>
+			<li>moved planet and moon rise/transit/set inside dial</li>
+			<li>made moon/planet bands thicker</li>
+			<li>made light/twilight/dark bands thicker</li>
+			<li>changed button text to emojis</li>
+			<li>increased size of some fonts</li>
+			<li>new text engine avoids overlapping text</li>
+			<li>improved corner text</li>
+			<li>photorealistic moon</li>
+			<li>change moon orientation based on observer position</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.36 (tauclock_0_36.apk)
