--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 		<br>
 		A clock for camping on planet earth</br>
 		<br>
-		<a href=tauclock_0_37.apk>tauclock_0_37.apk</a><br>
+		<a href=tauclock_0_38.apk>tauclock_0_38.apk</a><br>
 		<br>
 		<table><tr><td><img width=320 src=tauclock_0_28_main.png></td><td><img width=320 src=tauclock_0_26_globe.png></td></tr></table><br>
 		<br>
@@ -20,6 +20,17 @@ You can read all about it in <a href="primer_000.html">the tauclock primer</a><b
 <a href="primer.html">the older tauclock primer</a>
 <hr>
 === CHANGELOG === <br>
+<hr>
+<ul>
+	<li>v0.38 (tauclock_0_38.apk)
+		<ul>
+			<li>higher contrast, bigger moon</li>
+			<li>improved drawing for some overlap cases</li>
+			<li>fixed bugs with eclipse calculation</li>
+			<li>new font drawing engine</li>
+		</ul>
+	</li>
+</ul>
 <hr>
 <ul>
 	<li>v0.37 (tauclock_0_37.apk)
